# python_modular_monolith

./: pyproject.toml  readme.md
src/bootstrapper/: bootstrapper.py
src/modules/market_data/: module.py
src/modules/market_data/api/: routers.py
src/modules/market_data/application/: command_handlers.py  commands.py  queries.py  query_handlers.py
src/modules/market_data/application/events/: market_data_event.py
src/modules/orders/: module.py
src/modules/orders/api/: routers.py
src/modules/orders/application/: command_handlers.py  commands.py  queries.py  query_handlers.py
src/shared/: app_container.py  infrastructure.py
src/shared/commands/: abstractions.py  command_dispatcher.py  command_handler_registrar.py  config.py
src/shared/di/: abstractions.py  container.py  fastapi.py  scope.py
src/shared/dispatching/: abstractions.py  config.py  default_dispatcher.py
src/shared/events/: abstractions.py  config.py  default_event_dispatcher.py  event_handler_registrar.py
src/shared/logging/: abstractions.py  config.py  default_logger.py
src/shared/messaging/: abstractions.py  async_dispatcher_job.py  async_message_dispatcher.py  config.py  in_memory_channel.py
src/shared/middleware/: config.py  transaction_middleware.py
src/shared/modules/: abstractions.py  config.py  handler_registration.py  loading.py  module_client.py  module_registry.py
src/shared/queries/: abstractions.py  config.py  dispatcher.py  registrar.py
src/shared/registrars/: abstractions.py  config.py
src/shared/routers/: router_registrar.py
(+3 files in other folders)
